# 2341_Search-Engine

./: AVLTree.h  AVLTreeTest.cpp  CMakeLists.txt  Design.md  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  IndexHandlerTesting.cpp  MapValue.h  QueryEngine.cpp  QueryEngine.h  SearchEngine.cpp  SearchEngine.h  Tests.cpp  ToDo.md  a.out  documentation.md  main.cpp  porter2_stemmer.cpp  rapidJSONExample.cpp  saved_tree_file  stopWords.txt
sample_data/coll_1/: blogs_0000102.json  news_0064567.json
util/: hash.h  string_view.h
